--- a/main.css
+++ b/main.css
@@ -199,6 +199,10 @@ body{
 	float: left;
 }
 
+#squ{
+	width: 1000px;
+}
+
 .box{
 	margin: 10px;
 	width: 230px;
@@ -215,6 +219,8 @@ body{
 	background-color: #999;
 	cursor: pointer;
 	transform: scale(0.9);
+	color: #333333;
+
 }
 
 .box2{
@@ -232,6 +238,8 @@ body{
 	background-color: #999;
 	cursor: pointer;
 	transform: scale(0.9);
+	color: #333333;
+
 }
 
 .h2{
@@ -259,6 +267,26 @@ a:hover {
 	text-decoration: underline;
 }
 
+/*Przycisk*/
+.submit {
+	text-shadow: 0px 2px 2px #777;
+	border: 4px solid #FFA500;
+	padding: 5px;
+	font-size: 15px;
+	min-width: 100px;
+	background-color:  #777;
+	color: #fff;
+}
+
+.submit:hover {
+	color: #333333;
+	border: 4px solid #FE7F00;
+	text-shadow: 0px 2px 2px #777;
+	font-weight: 700;
+	background-color: #999;
+	cursor: pointer;
+}
+
 #sentence{
 	font-size: 20px;
 	font-weight: 700;
@@ -278,7 +306,9 @@ a:hover {
 }
 
 .bor{
-	width: 100%;
+	margin-left: auto;
+	margin-right: auto;
+	width: 500px;
 	border: 5px dashed #FE7F00;
 }
 
